Closed Bug 779393 Opened 12 years ago Closed 12 years ago

Compile error in js shells involving 'resizeUninitialized' in 'JS::AutoIdVector' in jsiter.cpp involving --enable-more-deterministic

Categories

(Core :: JavaScript Engine, defect)

x86_64
macOS
defect
Not set
blocker

Tracking

()

VERIFIED FIXED
mozilla17

People

(Reporter: gkw, Assigned: dmandelin)

References

Details

Attachments

(1 file)

There is a compile error on Mac js shells in jsiter.cpp involving an error: no member named 'resizeUninitialized' in 'JS::AutoIdVector'

I am on mozilla-central changeset 02346e2e7156

===

nsinstall.c
pathsub.c
jskwgen.cpp
jsoplengen.cpp
bignum-dtoa.cc
bignum.cc
cached-powers.cc
diy-fp.cc
double-conversion.cc
fast-dtoa.cc
fixed-dtoa.cc
strtod.cc
jsalloc.cpp
jsanalyze.cpp
jsapi.cpp
jsarray.cpp
/Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/mfbt/double-conversion/strtod.cc:522:11: warning: equality comparison with extraneous parentheses [-Wparentheses]
  if ((f1 == f4)) {
       ~~~^~~~~
/Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/mfbt/double-conversion/strtod.cc:522:11: note: remove extraneous parentheses around the comparison to silence this warning
  if ((f1 == f4)) {
      ~   ^    ~
/Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/mfbt/double-conversion/strtod.cc:522:11: note: use '=' to turn this equality comparison into an assignment
  if ((f1 == f4)) {
          ^~
          =
jsatom.cpp
jsbool.cpp
jsclone.cpp
jscntxt.cpp
1 warning generated.
jscompartment.cpp
jsdate.cpp
jsdbgapi.cpp
jsdhash.cpp
jsdtoa.cpp
jsexn.cpp
jsfriendapi.cpp
jsfun.cpp
jsgc.cpp
jscrashreport.cpp
jshash.cpp
jsinfer.cpp
jsinterp.cpp
jsiter.cpp
jslog2.cpp
jsmath.cpp
jsnativestack.cpp
jsnum.cpp
jsobj.cpp
json.cpp
jsonparser.cpp
jsopcode.cpp
jsproxy.cpp
/Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/js/src/jsiter.cpp:301:14: error: no member named 'resizeUninitialized' in 'JS::AutoIdVector'
    if (!tmp.resizeUninitialized(n))
         ~~~ ^
1 error generated.

In the directory  /Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/js/src/dbg-objdir
The following command failed to execute properly:
/usr/bin/clang++ -o jsiter.o -c -fvisibility=hidden -DIMPL_MFBT -DEXPORT_JS_API -DNO_NSPR_10_SUPPORT -DUSE_ZLIB -I/Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/js/src/../../mfbt/double-conversion -I/Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/js/src -I. -I./dist/include -I/Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/js/src -I/Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/js/src/assembler -I/Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/js/src/yarr -fPIC -Qunused-arguments -Qunused-arguments -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Wtype-limits -Wempty-body -Wno-ctor-dtor-privacy -Wno-overlength-strings -Wno-invalid-offsetof -Wno-variadic-macros -Wno-c++0x-extensions -Wno-unknown-warning-option -Wno-return-type-c-linkage -fno-common -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -pthread -pipe -DDEBUG -D_DEBUG -DTRACING -g -fno-omit-frame-pointer -DUSE_SYSTEM_MALLOC=1 -DENABLE_ASSEMBLER=1 -DENABLE_JIT=1 -Qunused-arguments -DMOZILLA_CLIENT -include ./js-confdefs.h -MD -MF .deps/jsiter.o.pp /Users/skywalker/Desktop/jsfunfuzz-mozilla-central-R4c75j-02346e2e7156-100965/compilePath/js/src/jsiter.cpp
make[1]: *** [jsiter.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make: *** [default] Error 2
Attached patch PatchSplinter Review
Gary hit this in an --enable-more-deterministic build.
Attachment #647818 - Flags: review?(bhackett1024)
Assignee: general → dmandelin
Status: NEW → ASSIGNED
Bug 776579 was likely the cause.
Blocks: 776579
Summary: Compile error on Mac js shells involving 'resizeUninitialized' in 'JS::AutoIdVector' in jsiter.cpp → Compile error in js shells involving 'resizeUninitialized' in 'JS::AutoIdVector' in jsiter.cpp involving --enable-more-deterministic
Attachment #647818 - Flags: review?(bhackett1024) → review+
http://hg.mozilla.org/integration/mozilla-inbound/rev/785e4e86798b

in-testsuite- because this fixes a compile error.
Flags: in-testsuite-
Target Milestone: --- → mozilla17
https://hg.mozilla.org/mozilla-central/rev/785e4e86798b
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: