Bug 779393 - Fix compile error in jsiter.cpp involving --enable-more-deterministic, r=bhackett